--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
+<body>
 <header>
   <h1>Score Keeper</h1>
 </header><!--  /header  -->
@@ -15,15 +16,15 @@
     <button class="player1" onclick="playyer1(0)">Player1 ❯</button>
     <button class="player2" onclick="player2(0)">Player2 ❯</button>
   </section><!-- /section -->
-  <div class="scrore1">0</div>
-  <div class="scrore2">0</div>
+  <div class="scrore1"></div>
+  <div class="scrore2"></div>
   <section class="score">
-    <input type="number" name="" value="1">
-    <button class="reset" onclick="reset(0)">reset ❯</button>
+    <input type="text" name="" value="5" size="1">
+    <button class="reset" onclick="document.location.reload(true);">reset ❯</button>
   </section>
 </main>
 
-<body>
 
+<script src="./js/main.js"></script>
 </body>
 </html>
