--- a/index.html
+++ b/index.html
@@ -8,36 +8,40 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="bgrd">
+
+</div>
   <header>
-    <h1>Score Keeper</h1>
-  </header><!--  /header  -->
-  <main>
+<h1>Score Keeper</h1>
+ </header><!--  /header  -->
 
-    <section class="player">
-      <div class="player1">
-        <h2>Player 1</h2>
-        <div class="scorecontainer">
-        </div>
-        <input class="score" disabled="disabled" value="0"/>
-        <button class="btn add" data-player="1">Add points</button>
+ <main>
+
+  <section class="player">
+    <div class="player1">
+      <h2>Player 1</h2>
+      <div class="scorecontainer">
       </div>
-      <div class="divider"></div>
-      <div class="player2">
-        <h2>Player 2</h2>
-        <div class="scorecontainer">
-        </div>
-        <input class="score" disabled="disabled" value="0"/>
-        <button class="btn add" data-player="0">Add points</button>
+      <input class="score" disabled="disabled" value="0"/>
+      <button class="btn add" data-player="1">Add points</button>
+    </div>
+    <div class="divider"></div>
+    <div class="player2">
+      <h2>Player 2</h2>
+      <div class="scorecontainer">
       </div>
-    </section>
-    <section class="parameter">
-      <input type="number" value="5" class="maxScore">
-      <button class="btn save">save</button>
-      <button class="btn reset">reset</button>
-    </section>
-  </main>
+      <input class="score" disabled="disabled" value="0"/>
+      <button class="btn add" data-player="0">Add points</button>
+    </div>
+  </section>
+  <section class="parameter">
+    <input type="number" value="5" class="maxScore">
+    <button class="btn save">save</button>
+    <button class="btn reset">reset</button>
+  </section>
+</main>
 
 
-  <script src="./js/main.js"></script>
+<script src="./js/main.js"></script>
 </body>
 </html>
